Fix path to src for linting

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "scripts": {
     "start": "rollup -c -w",
     "build": "rollup -c",
-    "lint": "eslint --ext .ts,.tsx src"
+    "lint": "eslint --ext .ts,.tsx pkg/web/src"
   }
 }
