--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "legend-web",
   "private": true,
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "esbuild": "^0.9.6",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
@@ -14,16 +13,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.39.1",
-    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
     "preact": "^10.5.13"
   },
   "scripts": {
-    "start": "rollup -c -w",
-    "build": "rollup -c",
+    "start": "tsc --noEmit && ./esbuild",
+    "build": "tsc --noEmit && ./esbuild --prod",
     "lint": "eslint --ext .ts,.tsx pkg/web/src"
   }
 }
