Update esbuild to remove the serve code

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "preact": "^10.5.13"
   },
   "scripts": {
-    "start": "tsc --noEmit && ./esbuild",
-    "build": "tsc --noEmit && ./esbuild --prod",
+    "build": "tsc --noEmit && ./esbuild",
     "lint": "eslint --ext .ts,.tsx pkg/web/src"
   }
 }
